<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <SwitchPreferenceCompat
            app:key="background_services"
            app:title="@string/background_services_title"
            app:summary="@string/background_services_summary"/>

        <EditTextPreference
            app:key="grade"
            app:title="@string/grade"
            app:summary="@string/grade_preference_desc" />

        <SwitchPreferenceCompat
            app:key="filter_plans"
            app:title="@string/filter_plans"
            app:summary="@string/filter_plans_desc"
            app:enabled="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/others">
        <Preference
            app:key="logout"
            app:title="@string/logout_title"
            app:summary="@string/logout_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="version"
            app:title="@string/version"
            app:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>